--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             >
               <address>
                 <p class="contact-title">CONTACT ME</p>
-                <p><i class="fa fa-phone"></i> 0799840686</p>
+                <p><i class="fa fa-phone"></i> +254799840686</p>
                 <p><i class="fa fa-envelope-o"></i> henrymise33@gmail.com</p>
                 <p><i class="fa fa-map-marker"></i> Lumumba Drive, Roysambu.</p>
               </address>
@@ -282,7 +282,7 @@
               class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp"
               data-wow-delay="0.6s"
             >
-              <form role="form" method="post" action="#">
+              <form role="form" method="post" action="https://formsubmit.co/henrymise33@email.com">
                 <input
                   name="name"
                   type="text"
