--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
             <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
               <div class="media">
                 <div class="media-object media-left">
+                  <i class="fa fa-paper-plane"></i>
+                </div>
+                <div class="media-body">
+                  <h3 class="media-heading">UI &AMP; UX Design</h3>
+                  <p>
+                    "As a web designer, I specialize in creating visually appealing, responsive websites that are optimized for user experience. I design intuitive layouts, develop interactive user interfaces, and ensure seamless navigation across all devices. By blending creativity with functionality, I craft digital solutions that not only capture brand identity but also drive user engagement and business growth. From concept to completion, I focus on delivering websites that are both aesthetically pleasing and performance-driven."
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+              <div class="media">
+                <div class="media-object media-left">
                   <i class="fa fa-laptop"></i>
                 </div>
                 <div class="media-body">
@@ -100,19 +113,7 @@
               </div>
             </div>
 
-            <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
-              <div class="media">
-                <div class="media-object media-left">
-                  <i class="fa fa-paper-plane"></i>
-                </div>
-                <div class="media-body">
-                  <h3 class="media-heading">UI &AMP; UX Design</h3>
-                  <p>
-                    "As a web designer, I specialize in creating visually appealing, responsive websites that are optimized for user experience. I design intuitive layouts, develop interactive user interfaces, and ensure seamless navigation across all devices. By blending creativity with functionality, I craft digital solutions that not only capture brand identity but also drive user engagement and business growth. From concept to completion, I focus on delivering websites that are both aesthetically pleasing and performance-driven."
-                  </p>
-                </div>
-              </div>
-            </div>
+
           </div>
         </div>
       </div>
@@ -282,7 +283,7 @@
               class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp"
               data-wow-delay="0.6s"
             >
-              <form role="form" method="post" action="https://formsubmit.co/henrymise33@email.com">
+              <form role="form" method="post" action="https://formsubmit.co/henrymise33@gmail.com">
                 <input
                   name="name"
                   type="text"
