--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp"
               data-wow-delay="0.6s"
             >
-              <form role="form" method="post" action="mailto:henrymise33@gmail.com" enctype="text/plain">
+              <form role="form" method="post" action="https://formsubmit.co/henrymise33@email.com">
                 <input
                   name="name"
                   type="text"
